website/assets/styles/pages/platform.less
#platform {

  h2 {
    font-size: 24px;
    line-height: 32px;
    margin-bottom: 24px;
  }
  h3 {
    font-size: 20px;
    line-height: 24px;
    font-weight: 700;
  }
  h4 {
    font-size: 24px;
    line-height: 28px;
    font-weight: 400;
  }
  a > img {
    display: inline;
    height: 16px;
    width: 16px;
    position: relative;
    bottom: 2px;
    margin-left: 8px;
  }
  a & a:active & a:hover {
    text-decoration: none;
  }

  [purpose='platform-banner-background'] {
    background: linear-gradient(100.68deg, #1F1D42 0%, #00FFF0 100%);
    overflow: hidden;
  }

  [purpose='platform-feature-image'] {
    max-width: 100%;
    filter: drop-shadow(0px 3.85401px 24.0876px rgba(0, 0, 0, 0.15));
    border-radius: 4.78295px;
    margin-top: -15px;
  }

  [purpose='platform-content'] {
    padding-top: 100px;
    max-width: 1400px;
    padding-left: 100px;
    padding-right: 100px;
  }

  [purpose='platform-section'] {
    padding-top: 100px;
  }

  [purpose='platform-user-story'] {
    margin-top: 80px;
    padding: 30px 24px;
    max-height: 180px;
    max-width: 900px;
    background-color: #192147;
    filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.1));
    border-radius: 16px;
    color: #F9FAFC;
    overflow: hidden;
    a {
      color: #F9FAFC;
      font-weight: 700;
      text-decoration: none;
    }
    svg {
      position: fixed;
      left: -50px;
      bottom: 0px;
      overflow: hidden;
      vertical-align: middle;
      z-index: -1;
      width: 367px;
      height: 180px;
    }
    img:not(a > img) {
      position: fixed;
      display: inline;
      height: 120px;
      z-index: 1;
      left: 60px;
      bottom: 30px;
    }
  }

  [purpose='platform-banner'] {
    color: #F9FAFC;
    position: relative;
    padding: 100px 80px 0px 80px;
    height: 520px;
    [purpose='platform-banner-text'] {
      max-width: 544px;
      z-index: 2;
      padding-bottom: 140px;
    }
    [purpose='platform-banner-hero'] {
      img {
        display: inline-block;
        height: 100%;
        position: absolute;
        right: -25px;
        bottom: -90px;
        z-index: 1;
      }
    }
    [purpose='banner-curve'] {
      z-index: 2;
      position: absolute;
      left: -25px;
      bottom: -1px;
    }
  }
  [purpose='next-steps'] {
    padding-top: 80px;
    padding-bottom: 120px;
    .card {
      background: #FFFFFF;
      border: 1px solid #E2E4EA;
      box-sizing: border-box;
      box-shadow: 1px 2px 2px rgba(197, 199, 209, 0.2);
      border-radius: 16px;
      padding: 32px;
      a {
        position: relative;
        bottom: 5px;
        color: #192147;
        font-weight: 700;
        text-decoration: none;
      }
      img {
        display: inline;
      }
    }
  }

  [purpose='platform-logos'] {
    padding-top: 24px;
    img {
      height: 92px;
      width: 112px;
      display: inline;
    }
  }

  [purpose='platform-bullet-list'] {
    p {
      padding-left: 24px;
      text-indent: -24px;
    }
    p::before {
      content: url('/images/platform/icon-bullet-point-6x6@2x.png');
      margin-right: 12px;
    }
  }

  @media (min-width: 1199px) {

    [purpose='platform-content'] {
      padding-top: 100px;
      max-width: 1400px;
      padding-left: 100px;
      padding-right: 100px;
    }

    [purpose='platform-banner'] {

      [purpose='platform-banner-hero'] {
        img {
          display: inline-block;
          width: 850px;
          position: relative;
          right: 0px;
          top: 0px;
          z-index: 1;
          bottom: unset;
        }
      }
    }
  }

  @media (max-width: 1199px) {

    [purpose='platform-banner'] {
      color: #F9FAFC;
      position: relative;
      [purpose='platform-banner-text'] {
        max-width: 544px;
      }
      [purpose='platform-banner-hero'] {
        img {
          width: 850px;
          position: relative;
          right: 0;
          top: 0;
          z-index: 1;
        }
      }
    }
    [purpose='platform-content'] {
      padding-top: 80px;
      padding-left: 40px;
      padding-right: 40px;
    }
  }

  @media (max-width: 991px) {
    [purpose='platform-banner'] {
      padding: 60px 40px 0px 40px;
      color: #F9FAFC;
      position: relative;
      height: 740px;

      [purpose='platform-banner-text'] {
        max-width: 520px;
        padding-bottom: 80px;
      }
      [purpose='platform-banner-hero'] {
        img {
          position: relative;
          width: 100%;
          right: -25px;
          top: 0px;
        }
      }
    }
  }

  @media (max-width: 767px) {

    [purpose='platform-user-story'] {
      max-height: 180px;
      margin-top: 40px;
      // padding: 31px 24px;
      // max-height: 345px;
      max-width: fit-content;
      background-color: #192147;
      filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.1));
      border-radius: 16px;
      color: #F9FAFC;
      overflow: hidden;
      p {
        margin-block-end: 4px;
      }
    }
    [purpose='next-steps'] {
      .card {
        padding: 32px 60px;
        margin-bottom: 16px;
      }
    }

    [purpose='platform-feature-image'] {
      padding-top: 60px;
      margin-left: auto;
      margin-right: auto;
      margin-top: -15px;
    }
    [purpose='platform-content'] {
      padding-top: 80px;
      padding-left: 120px;
      padding-right: 120px;
    }
    [purpose='platform-section'] {
      padding-top: 80px;
    }
    [purpose='platform-banner'] {
      padding: 60px 40px 0px 40px;
      color: #F9FAFC;
      position: relative;
      height: 780px;

      [purpose='platform-banner-text'] {
        max-width: 520px;
        padding-bottom: 60px;
      }
      [purpose='platform-banner-hero'] {
        img {
          position: relative;
          right: -25px;
          top: 0px;
          width: 100%;
        }
      }
    }

  }

  @media (max-width: 576px) {
    h1 {
      font-size: 28px;
      line-height: 54px;
    }
    [purpose='platform-banner-background'] {
      background: linear-gradient(141.32deg, #1F1D42 0%, #00FFF0 91.41%);;
      overflow: hidden;
    }
    [purpose='platform-section'] {
      padding-top: 60px;
    }
    [purpose='platform-content'] {
      padding-top: 20px;
      padding-left: 40px;
      padding-right: 40px;
    }

    [purpose='platform-banner'] {
      padding-top: 60px;
      color: #F9FAFC;
      position: relative;
      height: 700px;
      [purpose='platform-banner-text'] {
        max-width: 520px;
        padding-bottom: 40px;
      }
      [purpose='platform-banner-hero'] {
        img {
          position: relative;
          right: 0px;
          top: 0px;
          width: 110%;
        }
      }
    }

    [purpose='platform-user-story'] {
      margin-top: 40px;
      padding: 31px 24px;
      min-height: 375px;
      max-width: 375px;
      background-color: #192147;
      filter: drop-shadow(0px 4px 16px rgba(0, 0, 0, 0.1));
      border-radius: 16px;
      color: #F9FAFC;
      overflow: hidden;
      p {
        margin-block-end: 16px;
      }
      svg {
        position: fixed;
        top: 0px;
        left: 0px;
        overflow: hidden;
        vertical-align: middle;
        z-index: -1;
        width: 100%;
        height: auto;
      }
      img:not(a > img) {
        position: relative;
        display: inline;
        height: 120px;
        z-index: 1;
        top: -20px;
        left: 0px;
        margin-left: auto;
        margin-right: auto;
      }
    }
    [purpose='platform-logos'] {
      img {
        height: auto;
        width: 150px;
        margin: -10px;
        display: inline;
      }
    }
  }
  @media (max-width: 329px) {
    h1 {
      font-size: 26px;
    }
  }
}

